--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
+
+Send a message to <%= @user.name %>:
+<%= form_for(@user, @message) do |f| %>
+
+<%= f.text_box :content %>
+
+<%= f.submit %>
